新增了关于我们页面，和修改了部分样式。

--- a/诺立美/css/index.css
+++ b/诺立美/css/index.css
@@ -34,11 +34,8 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.navbar-default .my-nav .active a{
+.navbar-default .my-nav li:hover a{
     border-radius:20px;
-    background-color:#fff;
-}
-.navbar-default .my-nav .active a:hover{
     background-color:#fc8136;
     color:#fff;
 }
