--- a/诺立美/css/about.css
+++ b/诺立美/css/about.css
@@ -75,63 +75,34 @@
     margin-top:-4px;
 }
 
-/* 路径导航 */
-.nav2{
+/* news */
+.news{
     margin-top:100px;
 }
-.breadcrumb{
-    background-color:rgba(255,255,255,0);
+.news h2{
+    padding-left:85px;
 }
-.breadcrumb>li+li:before{
-    content:'>>';
-    color:#000;
+.media{
+    margin-top:30px !important;
 }
-.breadcrumb a, .breadcrumb>.active{
-    color:#000;
-}
-
-/* 商品展示 */
-.content h3{
-    margin-bottom:30px;
-}
-.content span{
-    background-color:#424f5c;
-    color:#fff;
-    padding:5px 15px;
-}
-.content ul{
-    height:30px;
-    margin-top:40px;
-    list-style:none;
-}
-.content ul li{
-    padding:5px 15px;
-}
-.content ul li:hover{
-    border-top:3px solid #85b200;
-}
-.test{
-    width: 500px;
-    margin-left: 15px;
-    margin-top: 20px;
-}
-
-/* more */
-.more p{
-    background-color:#ededed;
-}
-.more span{
-    padding:2px 15px;
-    font-size:15px;
-    background-color:#f5f5f5;
-}
-.shop-items{
-    display:flex;
-    justify-content:space-around;
-    text-align:center;
-}
-.shop-items p{
+.new-items{
+    border:1px solid #ccc;
+    border-radius:5px;
+    padding-bottom:25px;
     background-color:#fff;
+}
+.new-items .media-body h3{
+    margin-top:10px;
+    height: 53px;
+    line-height: 53px
+}
+.new-items .media-body h3 span{
+    margin-left:10px;
+    color:#252c32;
+}
+.new-items .media-body p{
+    margin-top:30px;
+    color:#46525f;
 }
 
 /* 底部 */
@@ -149,14 +120,20 @@ footer{
     color:#000;
 }
 
+.media-body{
+    width:58.33333333%;
+}
 a:hover{
     text-decoration:none;
 }
+
 
 /* px端 */
 @media(min-width:992px) and (max-width:1199px){
     /* 导航栏 */
     .brank{
+        width:150px;
+        height:150px;
         left:75px;
     }
     .my-nav{
@@ -165,14 +142,28 @@ a:hover{
     .sina{
         right:65px;
     }
+    .brank img{
+        margin:60px 0 0 7px;
+    }
+
+    .news h2{
+        padding-left:70px;
+    }
+    .new-items .media-body h3{
+        margin-top:0;
+    }
+    .new-items .media-body p{
+        margin-top:0;
+    }
 }
+
 /* 平板端 */
 @media(min-width:768px) and (max-width:991px){
     /* 导航栏 */
     .brank{
         width:120px;
         height:120px;
-        left:90px;
+        left:40px;
     }
     .brank img{
         margin:46px 0 0 0 ;
@@ -181,39 +172,25 @@ a:hover{
         margin-right:-10px;
     }
     .nav>li>a{
-        padding:0 5px;
+        padding:5px 5px;
     }
     .sina{
         right:20px;
     }
 
-    /* 路径导航 */
-    .nav2 {
-        margin-top: 50px;
+    .media-body{
+        width:100%;
     }
-
-    /* 产品详细 */
-    .detail .content h3{
-        font-size:20px;
-    }
-    .detail .content ul{
-        margin-top:20px;
-    }
-    .detail .test{
-        width:340px;
-        margin-top:10px;
+    .news h2{
+        padding-left:50px;
     }
 }
+
 /* 手机端 */
 @media(max-width:767px){
     /* 导航栏 */
     .brank{
-        width:120px;
-        height:120px;
-        left:90px;
-    }
-    .brank img{
-        margin:46px 0 0 0 ;
+        display:none;
     }
     .sina{
         display:none;
@@ -223,40 +200,20 @@ a:hover{
         border:0;
     }
 
-    /* 路径导航 */
-    .nav2 {
-        margin-top: 70px;
+    .media-body{
+        width:100%;
+    }
+    .news h2{
+        padding-left:30px;
     }
 
-    /* 产品详细 */
-    .detail .content h1{
-        font-size:20px;
-        font-weight:600;
-    }
-    .detail .content h3{
-        font-size:15px;
-    }
-    .detail .content ul{
-        margin-top:20px;
-    }
-    .content ul li{
-        padding:5px;
-    }
-    .detail .test{
-        width:250px;
-        margin-left:5px;
-        margin-top:10px;
-    }
-    .detail .test label{
-        font-size:10px;
-        font-weight:500;
-    }
+
     footer img{
         width: 80px;
         margin-top: 10px
     }
     .foot-right span {
-        padding: 10px 5px;
+        padding: 10px 36px 10px 0px;
         font-size:10px;
     }
 }
