--- a/诺立美/css/dynamic.css
+++ b/诺立美/css/dynamic.css
@@ -85,8 +85,8 @@
 }
 .content{
     width:100%;
-    height:800px;
-    background-color: purple;
+    height:690px;
+    background-color: #fff;
 }
 .news .dynamicv .content .content-left{
     width:200px;
@@ -116,19 +116,16 @@
     border-left:15px solid #ff9326;
 }
 .content-right .content-items{
-    width:600px;
-    height:400px;
-    background-color:#f55;
+    width:715px;
+    height:690px;
 }
 .content-right{
     margin-left:30px;
 }
 .items-top{
     height:50px;
-    /* line-height:50px; */
 }
 .time{
-    display:inline-block;
     background-color: #b6b6b6;
     width: 50px;
     height: 50px;
@@ -137,8 +134,54 @@
     text-align: center;
 }
 .title{
-    color:#333;
+    line-height:50px;
+    padding-left:20px;
     font-size:20px;
+}
+.title a{
+    color:#333;
+}
+.media{
+    padding-left:50px;
+    height:180px;
+    border-bottom:1px solid #000;
+}
+.img-thumbnail{
+    border-radius:0;
+}
+.media-body p{
+    color:#ccc;
+}
+.read,.read-2{
+    position:relative;
+    padding-left:20px;
+    width:120px;
+    height:20px;
+    margin-top:40px;
+}
+.read-2{
+    margin-top:0px;
+}
+.read label{
+    cursor:pointer;
+}
+.read label::before{
+    width:10px;
+    height:10px;
+    content:'';
+    position:absolute;
+    top:5px;
+    left:0;
+    background-color:#ccc;
+}
+.read-2::before{
+    width:10px;
+    height:10px;
+    content:'';
+    position:absolute;
+    top:5px;
+    left:0;
+    background-color:#ccc;
 }
 
 
@@ -157,6 +200,9 @@ footer{
     color:#000;
 }
 
+.media-body{
+    width:65%;
+}
 a:hover{
     text-decoration:none;
 }
@@ -178,6 +224,21 @@ a:hover{
     }
     .brank img{
         margin:60px 0 0 7px;
+    }
+    .content{
+        height: 840px;
+    }
+    .title{
+        padding-left:10px;
+    }
+    .content-right .content-items{
+        width:545px;
+    }
+    .media-body{
+        width:65%;
+    }
+    footer{
+        margin-top:30px;
     }
 }
 
